# warframe-bot

./: .gitignore  Cargo.toml  README.md  example.json  flake.nix  nixos.nix  package.nix
src/: api.rs  blacklist.rs  cache.rs  circuit.rs  cli.rs  commands.rs  date.rs  discord.rs  handler.rs  item_display.rs  lib.rs  logging.rs  main.rs  news_wrapper.rs  periodic.rs  wrappers.rs
src/api/: mod.rs  news.rs  trader.rs
src/discord/: mod.rs  utils.rs
