[package]
name = "wf-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
reqwest = "0.12.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.44.0", features = ["full"] }
