[package]
name = "wf-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serenity = "0.12.4"
tokio = "1.46.1"
warframe = "7.0.1"
