[package]
name = "wf-bot"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
ascii_table = "4.0.7"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "env"] }
colored = "3.0.0"
dirs = "6.0.0"
dotenv = "0.15.0"
itertools = "0.14.0"
once_cell = "1.21.3"
poise = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.46.1"
warframe = "7.0.1"
